------------
v3.0.0alpha5
------------




------------
v3.0.0alpha4
------------

[rla] Add Namespaced, PSR-3 compatible new logger design.
|+


------------
v3.0.0alpha3
------------

|+

------------
v3.0.0alpha2
------------

|+

------------
v3.0.0alpha1
------------


------
v2.3.0
------

[mjr] Use protected member variables to facilitate extending the
      Horde_Log_Logger class.


------
v2.2.0
------

[jan] Add a few common aliases for the log level constants.
[jan] Allow to have mltiple log level names with the same value.


------
v2.1.3
------

[jan] Mark PHP 7 as supported.


------
v2.1.2
------

[jan] Fix issues with certain locales like Turkish.


------
v2.1.1
------

[jan] Add Composer definition.


------
v2.1.0
------

[jan] Add a CLI formatter and handler.


------
v2.0.1
------

[mms] Use new Horde_Test layout.


------
v2.0.0
------

First stable release for Horde 5.


-----------
v2.0.0beta1
-----------

First beta release for Horde 5.


------------
v2.0.0alpha1
------------

First alpha release for Horde 5.


------
v1.1.2
------

[gwr] Fix installation paths (Bug #10588)


------
v1.1.1
------

[jan] Add 'ident' option to all handlers (Gonçalo Queirós
      <goncalo.queiros@portugalmail.net>, Request #9322).


------
v1.1.0
------

[cjh] New log filter for exact level matching (Bryan Alves
      <bryanalves@gmail.com>)


------
v1.0.0
------

First stable release for Horde 4.


---------
v1.0.0RC2
---------

Second release candidate for Horde 4.


---------
v1.0.0RC1
---------

First release candidate for Horde 4.


-----------
v1.0.0beta1
-----------

First beta release for Horde 4.


------------
v1.0.0alpha1
------------

First alpha release for Horde 4.
Added Horde_Log_Filter_Constraint, for flexible filtering per-field by the
      Horde_Constraint package.