@@ -1,5 +1,4 @@
 {
-    "minimum-stability": "dev",
     "name": "horde/log",
     "description": "Logging library",
     "type": "library",
@@ -22,7 +21,7 @@
             "role": "maintainer"
         }
     ],
-    "time": "2021-11-21",
+    "time": "2021-11-28",
     "repositories": [
         {
             "type": "composer",
@@ -33,19 +32,19 @@
         "php": "^7.4 || ^8",
         "php-extended/polyfill-php80-stringable": "^1",
         "psr/log": "^1",
-        "horde/constraint": "^3 || dev-FRAMEWORK_6_0",
-        "horde/exception": "^3 || dev-FRAMEWORK_6_0",
-        "horde/util": "^3 || dev-FRAMEWORK_6_0"
+        "horde/constraint": "^3",
+        "horde/exception": "^3",
+        "horde/util": "^3"
     },
     "require-dev": {
-        "horde/test": "^3 || dev-FRAMEWORK_6_0",
-        "horde/cli": "^3 || dev-FRAMEWORK_6_0",
-        "horde/scribe": "^3 || dev-FRAMEWORK_6_0"
+        "horde/test": "^3",
+        "horde/cli": "^3",
+        "horde/scribe": "^3"
     },
     "suggest": {
-        "horde/cli": "^3 || dev-FRAMEWORK_6_0",
-        "horde/scribe": "^3 || dev-FRAMEWORK_6_0",
-        "horde/test": "^3 || dev-FRAMEWORK_6_0",
+        "horde/cli": "^3",
+        "horde/scribe": "^3",
+        "horde/test": "^3",
         "ext-dom": "*"
     },
     "autoload": {
