@@ -2,7 +2,8 @@
 v3.0.0alpha5
 ------------
 
-
+[rla] Turned LogHandler options into classes.
+|+
 
 
 ------------
